src/objects/MDLZ_Promotion_Export__c.object
<CustomObject>
    <description>This will be used for the purpose of exporting promotion data to TRAX</description>
    <fields>
        <fullName>MDLZ_Activity_Ad_Break_Date__c</fullName>
        <description>Batch job will populate this field based on Ad break Day field on Account.</description>
        <label>Activity Ad Break Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDLZ_Activity_Description__c</fullName>
        <description>To store Anchor Customer and Anchor Customer Set Names/Id.</description>
        <label>Activity Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MDLZ_Activity_End_Date__c</fullName>
        <description>To store Promotion End Date</description>
        <label>Activity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDLZ_Activity_ID__c</fullName>
        <description>To store Promotion Salesforce record Id</description>
        <label>Activity ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MDLZ_Activity_Start_Date__c</fullName>
        <description>To store Promotion Start Date</description>
        <label>Activity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDLZ_Activity_Task_Description__c</fullName>
        <description>To store unique values of PPG/Sub PPG</description>
        <label>Activity Task Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MDLZ_Activity_Task_ID__c</fullName>
        <description>To store Tactic SF Id.</description>
        <label>Activity Task ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MDLZ_Activity_Type__c</fullName>
        <description>To store Promotion Template Name</description>
        <label>Activity Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MDLZ_StoreECC__c</fullName>
        <label>StoreECC</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store related account.</description>
        <label>Store</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotion Exports</relationshipLabel>
        <relationshipName>Promotion_Exports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Promotion Export</label>
    <nameField>
        <label>Promotion Export Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>